[package]
name = "hex2d-dpcext"
version = "0.1.0"
authors = [ "Dawid Ciężarkiewicz <dpc@dpc.pw>" ]
description = "dpc's hacky extensions to hex2d-rs library"
documentation = "http://dpc.github.io/hex2d-dpcext-rs/"
repository = "https://github.com/dpc/hex2d-dpcext-rs"
homepage = "https://github.com/dpc/hex2d-dpcext-rs"
readme = "README.md"
keywords = ["game", "map", "hex"]
license = "MIT"

[lib]
name = "hex2d_dpcext"
path = "src/lib.rs"

[dependencies]
num = "0.1.2"
rand = "0.3.7"
hex2d = "0.1.0"
